# pkb

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
skills/pkb/: SKILL.md
skills/pkb/agents/: openai.yaml
src/pkb/: cli.py  config.py  index.py  markdown.py  models.py  oauth.py  pages.py  search.py  storage.py  x_api.py
src/pkb_x/: __init__.py  cli.py  config.py  extractor.py  index.py  markdown.py  pages.py  storage.py
tests/: test_extractor.py  test_index_search.py  test_markdown.py  test_oauth.py  test_pages.py  test_storage.py
